# episode-monitor

./: README.md  pyproject.toml  pyrightconfig.sh
.github/workflows/: publish.yaml
src/episode_monitor/: main.py
src/python_tv_notify/: main.py
src/tvnotipy/: __init__.py  main.py
src/tvnotipy/config/: constants.py  getters.py  utils.py
src/tvnotipy/utils/: helpers.py
