[project]
name = "episode-monitor"
version = "1.2.0"
description = "Monitor wikipedia pages of tv shows and send a notification when new episodes are detected"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]

[project.scripts]
episode-monitor = "episode_monitor.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
